# mhp4hri

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md
mhp_planner/: CMakeLists.txt  package.xml
mhp_planner/cmake/modules/: FindIPOPT.cmake
mhp_planner/config/: default_controller.yaml  default_plant.yaml  default_plant_real.yaml  default_task.yaml
mhp_planner/include/mhp_planner/controllers/: controller_interface.h  predictive_controller.h  statistics.h
mhp_planner/include/mhp_planner/core/: console.h  factory.h  global.h  macros.h  range.h  reference_trajectory.h  text_style.h  time.h  time_series.h  types.h  utilities.h  value_comparison.h
mhp_planner/include/mhp_planner/hypergraph/: optimization_problem_interface.h  types.h
mhp_planner/include/mhp_planner/master/: master.h
mhp_planner/src/controllers/: predictive_controller.cpp
mhp_planner/src/core/: global.cpp  time.cpp  time_series.cpp
mhp_planner/src/hypergraph/: optimization_problem_interface.cpp
mhp_planner/src/master/: master.cpp
mhp_planner/src/numerics/: finite_differences.cpp
mhp_planner/src/plants/: plant_interface.cpp
mhp_planner/src/solvers/: nlp_solver_ipopt.cpp  nlp_solver_ipopt_wrapper.cpp
mhp_planner/src/systems/: standard_filters.cpp  system_dynamics_interface.cpp
mhp_planner/src/tasks/: environment.cpp
mhp_robot/: CMakeLists.txt  package.xml  setup.py
mhp_robot/config/: .gitignore
mhp_robot/config/human_motion_prediction/: extrapolation.yaml  golay_prediction.yaml  polynom_prediction.yaml  spl_prediction.yaml  uncertainty.yaml
mhp_robot/config/mocap/: server.yaml
mhp_robot/config/obstacle_spawner/: dynamic_obstacle.urdf.xacro  plane.urdf.xacro  static_obstacle.urdf.xacro
mhp_robot/config/obstacles/: dynamic_obstacles.yaml  human.yaml  planes.yaml  shelves.yaml  static_obstacles.yaml  utility_objects.yaml  wall.yaml
mhp_robot/config/rviz/: ur.rviz
mhp_robot/config/scenes/: empty.urdf  shelves.urdf
mhp_robot/config/worlds/: default.world
mhp_robot/launch/: bringup_mocap.launch  bringup_scenario.launch  obstacle_upload.launch  scene_upload.launch
mhp_robot/msg/: MsgBoundingBox.msg  MsgDistances.msg  MsgExtrapolatedAngle.msg  MsgFutureAngles.msg  MsgHuman.msg  MsgObstacle.msg  MsgObstacleList.msg  MsgPlane.msg  MsgRelativeOrientation.msg  MsgUncertaintyState.msg  MsgUtilityObject.msg
mhp_robot/scripts/: motion_prediction_spl.py  tfListener.py
mhp_robot/src/robot_collision/: robot_collision.cpp  robot_collision_marker_publisher.cpp
mhp_robot/src/robot_description/: robot_description.cpp
mhp_robot/src/robot_dynamic/: robot_dynamic.cpp
mhp_robot/src/robot_kinematic/: inverse_kinematic_algorithm_step.cpp  robot_inverse_kinematic.cpp  robot_kinematic.cpp
mhp_robot/src/robot_manipulator/: robot_manipulator.cpp
mhp_robot/src/robot_misc/: common.cpp  gmm.cpp  human.cpp  planning_delay.cpp  robot_utility.cpp  state.cpp  state_observer.cpp
mhp_robot/src/robot_mocap/: robot_mocap.cpp
mhp_robot/src/robot_obstacle/: obstacle_list.cpp  obstacle_processor.cpp  obstacle_publisher.cpp  obstacle_trajectory_generator.cpp
mhp_robot/src/robot_setpoint_manager/: robot_setpoint_manager.cpp
mhp_robot/src/robot_tools/: robot_mocap_client.cpp  robot_workspace_monitor.cpp  rosbag_play.cpp
mhp_robot/src/robot_trajectory_optimization/: robot_acceleration_constraint.cpp  robot_collision_constraint.cpp  robot_collision_potential.cpp  robot_collision_potential_mohri.cpp  robot_cost_function.cpp  robot_final_state_constraint.cpp  robot_information_gain.cpp  robot_information_gain_simple.cpp  robot_p_controller_joint_space.cpp  robot_quadratic_cost_joint_space.cpp  robot_stage_preprocessor.cpp  robot_state_constraint.cpp
mhp_robot/srv/: SrvStartSimulation.srv
mhp_robot_ur10_example/universal_robot/: package.xml
mhp_robot_ur10_example/ur10_planner/: CMakeLists.txt  package.xml
mhp_robot_ur10_example/ur10_planner/src/: ur_mhp_planner_node.cpp
mhp_robot_ur10_example/ur_description/: CMakeLists.txt  package.xml
mhp_robot_ur10_example/ur_description/launch/: rviz.launch  ur10_upload.launch
mhp_robot_ur10_example/ur_description/urdf/: camera_3d.urdf.xacro  ur.transmission.xacro  ur10.urdf.xacro  ur10_robot.urdf.xacro
mhp_robot_ur10_example/ur_gazebo/: CMakeLists.txt  package.xml
mhp_robot_ur10_example/ur_gazebo/config/: ur10.perspective
mhp_robot_ur10_example/ur_gazebo/controller/: controller_ur10.yaml
mhp_robot_ur10_example/ur_gazebo/launch/: ur10_gazebo.launch  ur10_rqt.launch
mhp_robot_ur10_example/ur_launch/: CMakeLists.txt  package.xml
mhp_robot_ur10_example/ur_launch/launch/: ur10_real.launch  ur10_real_ufomap.launch  ur10_sim_ufomap.launch  ur10_simulation.launch
mhp_robot_ur10_example/ur_modern_driver/: CMakeLists.txt  package.xml
mhp_robot_ur10_example/ur_modern_driver/config/: ur10_controllers.yaml  ur10_real.perspective
mhp_robot_ur10_example/ur_modern_driver/launch/: ur10_bringup.launch  ur10_ros_control.launch  ur10_rqt.launch  ur_common.launch
mhp_robot_ur10_example/ur_modern_driver/src/: robot_state.cpp  robot_state_RT.cpp  ur_communication.cpp  ur_driver.cpp  ur_hardware_interface.cpp  ur_realtime_communication.cpp  ur_ros_wrapper.cpp
mhp_robot_ur10_example/ur_msgs/: CMakeLists.txt  package.xml
mhp_robot_ur10_example/ur_msgs/msg/: ApplyBodyWrench.msg
mhp_robot_ur10_example/ur_utilities/: CMakeLists.txt  package.xml
mhp_ufomap/pcl_filters/: CMakeLists.txt  package.xml
mhp_ufomap/pcl_filters/src/: downsampling_filter.cpp  filter_node.cpp  outlier_filter.cpp  pcl_filter_processor.cpp  rosbag_pcl_play.cpp
mhp_ufomap/ufomap_bundled/: CMakeLists.txt  package.xml  plugin_description.xml
mhp_ufomap/ufomap_bundled/cfg/: Server.cfg
mhp_ufomap/ufomap_bundled/launch/: server.launch
mhp_ufomap/ufomap_bundled/msg/: AABB.msg  BoundingVolume.msg  Frustum.msg  LineSegment.msg  MsgInfoDist.msg  OBB.msg  Plane.msg  Ray.msg  Sphere.msg  UFOMap.msg  UFOMapMetaData.msg  UFOMapStamped.msg
mhp_ufomap/ufomap_bundled/srv/: ClearVolume.srv  GetMap.srv  SaveMap.srv
mhp_ufomap/ufomap_bundled/ufomap/: CMakeLists.txt  README.md
(+234 files in other folders)
