<?xml version="1.0"?>
<package format="2">
  <name>ur10_planner</name>
  <version>0.0.0</version>
  <description>The ur10_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="heiko.renz@tu-dortmund.de">Heiko Renz</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>

<build_depend>roscpp</build_depend>
<exec_depend>roscpp</exec_depend>
  <depend>mhp_planner</depend>
  <depend>mhp_robot</depend>
  <depend>ur_utilities</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
