<?xml version="1.0"?>
<package>
  <name>ur_gazebo</name>
  <version>1.0.0</version>
  <description>
      Gazebo wrapper for the Universal UR3/UR10 robot arms.
  </description>

  <author>Alexander Bubeck</author>
  <author email="jennifer.e.buehler@gmail.com">Jennifer Buehler</author>

  <author email="maximilian.kraemer@tu-dortmund.de">Maximilian Krämer</author>

  <maintainer email="heiko.renz@tu-dortmund.de">Heiko Renz</maintainer>
  
  <license>GPLv3</license>

  <url type="website">https://www.rst.e-technik.tu-dortmund.de</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>ur_utilities</build_depend>
  <build_depend>ur_msgs</build_depend>
  <build_depend>gazebo_ros_control</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>ur_description</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>rqt_joint_trajectory_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ur_utilities</run_depend>
  <run_depend>ur_msgs</run_depend>
  <run_depend>gazebo</run_depend>

  <export>
  </export>
</package>
